# plantcv

./: .all-contributorsrc  .codacy.yml  .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .travis.yml  10.9.1.241_autocrop_forRCNN.py  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NIR_pipeline_base.py  README.md  SPICE.py  _config.yml  about.html  analyze_vis_results.py  codecov.yml  color_slice_stitch.py  color_slice_stitched.py  documentation.html  environment.yml  environment2.yml  extract_flu_fvfm_data.py  extract_nir_signal_data.py  extract_tillering_data.py  extract_vis_color_data.py  extract_vis_shape_data.py  extract_vis_shape_data_new.py  fluor_z300_L1.py  fluor_z600_L1-brachy.py  fluor_z600_L1.py  get_raw_images.py  image_analysis-tiller.pl  image_analysis.pl  index.html  lifter_vis_sv_z1_L0.py  lifter_vis_tv_z1_L0.py  (+58 more)
.claude/: settings.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_includes/: about_carousel.html  footer.html  head.html  header.html  navbar.html  sidebar.html
_layouts/: about_layout.html  challenge.html  data_layout.html  default.html  docs.html
css/: custom.css
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HistEqualization.md  Points.md  Spectral_data.md  acute.md  acute_plm_tutorial_1.md  acute_plm_tutorial_2.md  acute_plm_tutorial_3.md  acute_vertex.md  adaptive_threshold.md  analysis_approach.md  analyze_NIR_intensity.md  analyze_bound.md  analyze_bound_horizontal.md  analyze_bound_horizontal2.md  analyze_bound_vertical.md  analyze_bound_vertical2.md  analyze_color.md  analyze_color2.md  analyze_distribution.md  analyze_grayscale.md  analyze_index.md  analyze_npq.md  analyze_radial_percentile.md  analyze_shape.md  analyze_size.md  analyze_spectral.md  analyze_spectral_index.md  analyze_spectral_reflectance.md  analyze_stem.md  analyze_texture.md  analyze_thermal.md  analyze_thermal_values.md  analyze_yii.md  annotate_click_count.md  annotate_detect_discs.md  (+283 more)
(+1271 files in other folders)
