[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = plantcv/plantcv/_version.py
versionfile_build = plantcv/plantcv/_version.py
tag_prefix = v
parentdir_prefix = plantcv-

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/tests.py
